# Drdemo

./: .gitignore  LICENSE  README.md
Demos/Breakout/: Breakout.cpp  CMakelists.txt
Demos/Breakout/Game/: Game.h
Demos/RayTracing/: CMakeLists.txt  RayTracing.cpp  RayTracing.h
Demos/RayTracing/Camera/: Camera.cpp  Camera.h
Demos/RayTracing/Color/: Color.h
Demos/RayTracing/Config/: Config.cpp  Config.h
Demos/RayTracing/Material/: Material.cpp  Material.h
Demos/RayTracing/Object/: Object.cpp  Object.h  ObjectList.cpp  ObjectList.h  Sphere.cpp  Sphere.h
Demos/RayTracing/Ray/: Ray.h
Demos/RayTracing/Renderer/: Renderer.cpp  Renderer.h
Demos/RayTracing/Scene/: Scene.h
Demos/RayTracing/Utility/: Utility.h
Demos/RayTracing/Vec3/: Vec3.cpp  Vec3.h
Demos/UIDemo/: CMakelists.txt  UIDemo.cpp  UIDemo.h
Demos/UIDemo/Camera/: Camera.cpp  Camera.h
Demos/UIDemo/Shader/: Shader.cpp  Shader.h
sources/RayTracing/: RayTracing.drconf
